--- a/Travelhub/src/index.css
+++ b/Travelhub/src/index.css
@@ -14,3 +14,15 @@ html::-webkit-scrollbar{
   font-family: "Rubik", sans-serif;
   
 }
+
+
+
+.fade-in {
+  opacity: 0;
+  animation: fadeInAnimation ease 1s forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
