--- a/Travelhub/src/index.css
+++ b/Travelhub/src/index.css
@@ -26,3 +26,20 @@ html::-webkit-scrollbar{
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+
+/* Truncate text for single line */
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* Truncate text for multi-lines */
+.truncate-line {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp:2; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
